<resources>
    <string name="app_name">InventoryApp</string>
    <string name="unknown_price">Unknown price</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="editor_activity_title_new_product">Add Product</string>
    <string name="editor_activity_title_detail_product">Product Details</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="discard">Discard</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="hint_supplier_name">Name</string>
    <string name="hint_supplier_telephone">Telephone</string>
    <string name="hint_name">Name</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_price">Price</string>
    <string name="product_name">Product Name:</string>
    <string name="example_product">Example Product</string>
    <string name="price">Price:</string>
    <string name="supplier_name">Supplier name:</string>
    <string name="google">Google</string>
    <string name="supplier_phone">Supplier Phone:</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="quantity">Quantity:</string>
    <string name="supplier_info">Supplier Info:</string>
    <string name="sale">Sale</string>
    <string name="price_list_item">Price:\u0020</string>
    <string name="product_cursor_sold_out">Sold out!</string>
    <string name="details_error_min_value">0 is the minimum value</string>
    <string name="editor_name_update_failed">Invalid Product Name</string>
    <string name="editor_price_update_failed">Invalid Product Price</string>
    <string name="editor_quantity_update_failed">Invalid Product Quantity</string>
    <string name="editor_supplier_name_update_failed">Invalid Supplier Name</string>
    <string name="editor_supplier_phone_update_failed">Invalid Supplier Phone Number</string>
</resources>
